@@ -1,36 +1,20 @@
 package org.investpro;
 
-import com.fasterxml.jackson.core.JsonParser;
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
-import com.fasterxml.jackson.databind.node.ArrayNode;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import javafx.beans.property.IntegerProperty;
 import javafx.beans.property.SimpleIntegerProperty;
-import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
-import javafx.scene.Scene;
-import javafx.scene.control.Label;
-import javafx.stage.Stage;
-import org.java_websocket.drafts.Draft_6455;
-import org.java_websocket.handshake.ServerHandshake;
 import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import javax.crypto.Mac;
-import javax.crypto.spec.SecretKeySpec;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
-import java.nio.charset.StandardCharsets;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
 import java.time.Instant;
@@ -39,219 +23,98 @@ import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.Future;
+import java.util.concurrent.ExecutionException;
 
 import static java.time.format.DateTimeFormatter.ISO_INSTANT;
-import static org.investpro.Coinbase.CoinbaseCandleDataSupplier.OBJECT_MAPPER;
+import static org.investpro.CoinbaseCandleDataSupplier.OBJECT_MAPPER;
 
-public class Coinbase extends Exchange {
+public  class Coinbase extends Exchange {
+    ; // This argument is for creating a WebSocket client for live trading data.
+    CustomWebSocketClient webSocketClient=new CustomWebSocketClient();
 
-    static HttpClient client = HttpClient.newHttpClient();
+    String websocketURL="wss://advanced-trade-ws.coinbase.com";
+    static  HttpClient client = HttpClient.newHttpClient();
     static HttpRequest.Builder requestBuilder = HttpRequest.newBuilder();
-
     private static final Logger logger = LoggerFactory.getLogger(Coinbase.class);
-    static String url = "https://api.coinbase.com/api/v3/brokerage";
-    //  Market Data Endpoint: wss://advanced-trade-ws.coinbase.com
-    //  User Order Data Endpoint: wss://advanced-trade-ws-user.coinbase.com
-    private String message;
-
-    protected Coinbase(String apiKey, String apiSecret) throws UnsupportedEncodingException, NoSuchAlgorithmException, InvalidKeyException {
-        super(
-                apiKey,
-                apiSecret
-
-                //  Arrays.asList("BTC-USD", "ETH-USD", "LTC-USD", "BCH-USD", "BSV-USD", "SOL-USD", "XRP-USD", "BTC-GBP", "ETH-GBP", "LTC-GBP", "BCH-GBP", "BSV-GBP", "SOL-GBP", "XRP-GBP", "BTC-EUR", "ETH-EUR", "LTC-EUR", "BCH-EUR", "BSV-EUR", "SOL-EUR", "XRP-EUR")
-        );
-
-        this.message = "Coinbase";
-        requestBuilder.header("Accept", "application/json");
-        requestBuilder.header("Content-Type", "application/json");
-
-        // Generate signature using API key and secret
+    public static final String API_URL = "https://api.coinbase.com/api/v3/brokerage";
+    String apiKey;
 
 
-        // Set headers for the request
-        requestBuilder.header("CB-ACCESS-KEY", apiKey);
-
-        long timestamp = System.currentTimeMillis();
-        String signature= signer(apiSecret,requestBuilder.toString(), String.valueOf(timestamp));
-        requestBuilder.header("CB-ACCESS-SIGN", signature);
-
-        requestBuilder.header("CB-ACCESS-TIMESTAMP", String.valueOf(timestamp));
-
-        // Set headers for WebSocket client
-        getWebSocketClient().addHeader("CB-ACCESS-KEY", apiKey);
-        getWebSocketClient().addHeader("CB-ACCESS-SIGN", signature);
-        getWebSocketClient().addHeader("CB-ACCESS-TIMESTAMP", String.valueOf(System.currentTimeMillis() / 1000));
-
-
-    }
-    // Updated signature generation method
-    private @NotNull String signer(String apiSecret, String requestPath, String timestamp)
-            throws NoSuchAlgorithmException, InvalidKeyException {
-
-        String rehash = "%sGET%s%s".formatted(timestamp, requestPath, "");
-        return hmacSHA256(apiSecret, rehash);
-    }
-
-    private @NotNull String hmacSHA256(@NotNull String apiSecret, @NotNull String message)
-            throws NoSuchAlgorithmException, InvalidKeyException {
-        Mac hmacSHA256 = Mac.getInstance("HmacSHA256");
-        hmacSHA256.init(new SecretKeySpec(apiSecret.getBytes(StandardCharsets.UTF_8), "HmacSHA256"));
-        byte[] rawHmac = hmacSHA256.doFinal(message.getBytes(StandardCharsets.UTF_8));
-        StringBuilder hexString = new StringBuilder();
-        for (byte b : rawHmac) {
-            String hex = String.format("%02x", b);
-            hexString.append(hex);
-        }
-        return hexString.toString();
+    public Coinbase(String apikey, String apiSecret){
+        super(apikey, apiSecret);
+        Exchange.apiSecret = apiSecret;
+        this.apiKey = apikey;
     }
 
     @Override
-    public CompletableFuture<Account> getAccounts() throws IOException, InterruptedException {
-
-        // Here you should implement the logic to fetch account details from Coinbase API
-        requestBuilder.uri(URI.create("%s/accounts".formatted(url)));
-        requestBuilder.GET();
-
-        HttpResponse<String> response = client.send(requestBuilder.build(), HttpResponse.BodyHandlers.ofString());
-        if (response.statusCode() == 200) {
-            ObjectMapper objectMapper = new ObjectMapper();
-            objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
-            objectMapper.registerModule(new JavaTimeModule());
-
-            List<Account> accounts = objectMapper.readValue(response.body(), objectMapper.getTypeFactory().constructCollectionType(List.class, Account.class));
-            return CompletableFuture.completedFuture(accounts.getFirst()); // Assuming there's only one account'
-        }
-        throw new RuntimeException("Failed to fetch account details: %s".formatted(response.body()));
+    public CompletableFuture<List<Fee>> getTradingFee() throws IOException, InterruptedException {
+        return null;
     }
 
     @Override
-    public Boolean isConnected() {
-        // Check if the WebSocket client is connected
-        return this.getWebSocketClient().connectionEstablished.get();
+    public CompletableFuture<List<Account>> getAccounts() throws IOException, InterruptedException {
+
+        requestBuilder.uri(URI.create(
+                "%s/accounts".formatted(API_URL)
+        )) ;
+        HttpResponse<String> response = client.send(requestBuilder.GET().build(), HttpResponse.BodyHandlers.ofString())
+                ;
+        if (response.statusCode()!= 200) {
+            throw new RuntimeException("Error fetching accounts: %d".formatted(response.statusCode()));
+        }
+        ObjectMapper objectMapper = new ObjectMapper();
+        List<Account> accounts = objectMapper.readValue(response.body(), objectMapper.getTypeFactory().constructCollectionType(List.class, Account.class));
+        return CompletableFuture.completedFuture(accounts);
 
     }
-
-    private ExchangeWebSocketClient getWebSocketClient() {
-        this.webSocketClient = new ExchangeWebSocketClient(URI.create("wss://advanced-trade-ws.coinbase.com"), new Draft_6455()) {
-            @Override
-            public CountDownLatch getInitializationLatch() {
-
-
-               return null;
-            }
-
-            @Override
-            public void streamLiveTrades(TradePair tradePair, LiveTradesConsumer liveTradesConsumer) {
-
-                Coinbase.this.webSocketClient.send(OBJECT_MAPPER.createObjectNode().put("type", "subscribe")
-                        .put("product_id", tradePair.toString('-')).toPrettyString());
-
-            }
-
-            @Override
-            public void stopStreamLiveTrades(TradePair tradePair) {
-                Coinbase.this.webSocketClient.send(OBJECT_MAPPER.createObjectNode().put("type", "unsubscribe")
-                        .put("product_id", tradePair.toString('-')).toPrettyString());
-
-            }
-
-            @Override
-            public boolean supportsStreamingTrades(TradePair tradePair) {
-
-                return true;
-
-
-            }
-
-            @Override
-            public void onError(Exception exception) {
-
-                logger.info(
-                        "WebSocket connection failed, retrying in 5 seconds. Error: {}",
-                        exception.getMessage()
-
-                );
-            }
-
-            @Override
-            public void onOpen(ServerHandshake handshake) {
-                logger.info("WebSocket connection established");
-                Coinbase.this.webSocketClient.getInitializationLatch().countDown();
-
-            }
-
-            @Override
-            public void onMessage(String message) {
-                try {
-                    ObjectMapper objectMapper = new ObjectMapper();
-                    objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
-                    objectMapper.registerModule(new JavaTimeModule());
-                    Trade liveTrade = objectMapper.readValue(message, Trade.class);
-                    liveTradesConsumer.accept(liveTrade);
-                } catch (JsonProcessingException e) {
-                    logger.error("Failed to parse WebSocket message: {}", message, e);
-                }
-
-            }
-
-            @Override
-            public void onClose(int code, String reason, boolean remote) {
-                logger.info("WebSocket connection closed ({}, {})", code, reason);
-                Coinbase.this.webSocketClient.getInitializationLatch().countDown();
-
-            }
-
-            @Override
-            public boolean connectBlocking() {
-                return false;
-            }
-        };
-        return this.webSocketClient;
-
-
-    }
-
 
     @Override
     public String getSymbol() {
-        return tradePair.toString('-');
+        return tradePair.toString('/');
     }
 
     @Override
-    public void createOrder(@NotNull TradePair tradePair, @NotNull Side side, @NotNull ENUM_ORDER_TYPE orderType, double price, double size, Date timestamp, double stopLoss, double takeProfit) throws IOException, InterruptedException {
-        this.tradePair = tradePair;
+    public void createOrder(@NotNull TradePair tradePair, @NotNull Side side, @NotNull ENUM_ORDER_TYPE orderType, double price, double size, Date timestamp, double stopLoss, double takeProfit) throws IOException, InterruptedException, NoSuchAlgorithmException, InvalidKeyException, ExecutionException {
 
-        requestBuilder.uri(URI.create(STR."\{url}/api/v3/orders"));
+        requestBuilder.uri(URI.create(
+                "%s/orders".formatted(API_URL)
+        )) ;
+        requestBuilder.setHeader("Content-Type", "application/json");
+        requestBuilder.setHeader("Authorization", "Bearer %s".formatted(apiKey));
         requestBuilder.method("POST", HttpRequest.BodyPublishers.ofString(OBJECT_MAPPER.writeValueAsString(new CreateOrderRequest(
-                tradePair.toString('-'),
+                tradePair.toString('/'),
                 side,
                 orderType,
                 price,
-                size,
-                timestamp,
+                size,timestamp
+                ,
                 stopLoss,
-                takeProfit
-        ))));
-        HttpResponse<String> response = client.send(requestBuilder.build(), HttpResponse.BodyHandlers.ofString());
-        if (response.statusCode() == 200) {
-            logger.info("Order created: {}", response.body());
-            return;
+                takeProfit))))
+                ;
+        HttpResponse<String> response = client.send(requestBuilder.build(), HttpResponse.BodyHandlers.ofString())
+                ;
+        if (response.statusCode()!= 200) {
+            throw new RuntimeException("Error creating order: %d".formatted(response.statusCode()));
         }
-        throw new RuntimeException(STR."Failed to create order: \{response.body()}");
+        logger.info("Order created: {}", response.body());
     }
 
     @Override
-    public CompletableFuture<String> cancelOrder(String orderId) throws IOException, InterruptedException {
-        requestBuilder.uri(URI.create(url + STR."/orders/cancel\{orderId}"));
+    public CompletableFuture<String> cancelOrder(String orderId) throws IOException, InterruptedException, NoSuchAlgorithmException, InvalidKeyException {
+
+        requestBuilder.uri(URI.create(
+                API_URL + "/orders/" + orderId
+        )) ;
+        requestBuilder.setHeader("Content-Type", "application/json");
+        requestBuilder.setHeader("Authorization", "Bearer " + apiKey);
         requestBuilder.method("DELETE", HttpRequest.BodyPublishers.noBody());
-        HttpResponse<String> response = client.send(requestBuilder.build(), HttpResponse.BodyHandlers.ofString());
-        if (response.statusCode() == 200) {
-            return CompletableFuture.completedFuture(orderId);
+        HttpResponse<String> response = client.send(requestBuilder.build(), HttpResponse.BodyHandlers.ofString())
+                ;
+        if (response.statusCode()!= 200) {
+            throw new RuntimeException("Error cancelling order: %d".formatted(response.statusCode()));
         }
-        throw new RuntimeException(STR."Failed to cancel order: \{response.body()}");
+        logger.info("Order cancelled: {}", orderId);
+        return CompletableFuture.completedFuture(orderId);
     }
 
     @Override
@@ -265,13 +128,6 @@ public class Coinbase extends Exchange {
     }
 
 
-    public @NotNull TradePair getTradePair() {
-        return tradePair;
-    }
-
-    public void setTradePair(@NotNull TradePair tradePair) {
-        this.tradePair = tradePair;
-    }
 
     /**
      * Fetches the recent trades for the given trade pair from  {@code stopAt} till now (the current time).
@@ -282,6 +138,7 @@ public class Coinbase extends Exchange {
     public CompletableFuture<List<Trade>> fetchRecentTradesUntil(TradePair tradePair, Instant stopAt) {
         Objects.requireNonNull(tradePair);
         Objects.requireNonNull(stopAt);
+
         if (stopAt.isAfter(Instant.now())) {
             return CompletableFuture.completedFuture(Collections.emptyList());
         }
@@ -298,32 +155,21 @@ public class Coinbase extends Exchange {
             // We will know if we get rate limited if we get a 429 response code.
 
             for (int i = 0; !futureResult.isDone(); i++) {
-                String uriStr = url;
-                uriStr += "/products/%s/trades".formatted(tradePair.toString('-'));
+                String uriStr = API_URL;
+                uriStr += "/products/" + tradePair.toString('-') + "/trades";
 
                 if (i != 0) {
-                    uriStr += "?after=%d".formatted(afterCursor.get());
+                    uriStr += "?after=" + afterCursor.get();
                 }
 
                 try {
-                    HttpResponse<String> response = client.send(
-                            requestBuilder
+                    HttpResponse<String> response = HttpClient.newHttpClient().send(
+                            HttpRequest.newBuilder()
                                     .uri(URI.create(uriStr))
                                     .GET().build(),
                             HttpResponse.BodyHandlers.ofString());
 
                     logger.info("response headers: %s".formatted(response.headers()));
-
-                    if (response.statusCode() != 200) {
-                        logger.error("Failed to fetch trades: %s for trade pair: %s".formatted(response.body(), tradePair));
-
-                        message = response.body();
-                        futureResult.completeExceptionally(new RuntimeException(
-                                "HTTP error response: %d".formatted(response.statusCode())));
-                        return;
-                    }
-
-                    message = response.body();
                     if (response.headers().firstValue("CB-AFTER").isEmpty()) {
                         futureResult.completeExceptionally(new RuntimeException(
                                 "coinbase trades response did not contain header \"cb-after\": %s".formatted(response)));
@@ -357,9 +203,6 @@ public class Coinbase extends Exchange {
                     }
                 } catch (IOException | InterruptedException ex) {
                     logger.error("ex: ", ex);
-                    message = ex.getMessage();
-                    futureResult.completeExceptionally(ex);
-                    return;
                 }
             }
         });
@@ -368,176 +211,121 @@ public class Coinbase extends Exchange {
     }
 
     /**
-     * This method fetches candle data for an in-progress candle to support live syncing.
+     * This method only needs to be implemented to support live syncing.
      */
     @Override
     public CompletableFuture<Optional<InProgressCandleData>> fetchCandleDataForInProgressCandle(
-            TradePair tradePair, Instant currentCandleStart, long secondsIntoCurrentCandle, int secondsPerCandle) {
-
-        // Format the start date for the request
-        String startDateString = DateTimeFormatter.ISO_LOCAL_DATE_TIME.format(
-                LocalDateTime.ofInstant(currentCandleStart, ZoneOffset.UTC));
-
-        // Determine the ideal granularity and adjust to the closest supported granularity
+            @NotNull TradePair tradePair, Instant currentCandleStartedAt, long secondsIntoCurrentCandle, int secondsPerCandle) {
+        String startDateString = DateTimeFormatter.ISO_LOCAL_DATE_TIME.format(LocalDateTime.ofInstant(
+                currentCandleStartedAt, ZoneOffset.UTC));
         long idealGranularity = Math.max(10, secondsIntoCurrentCandle / 200);
-        int actualGranularity = getCandleDataSupplier(secondsPerCandle, tradePair)
-                .getSupportedGranularity().stream()
-                .min(Comparator.comparingInt(granularity -> (int) Math.abs(granularity - idealGranularity)))
-                .orElseThrow(() -> new NoSuchElementException("No supported granularity found"));
+        // Get the closest supported granularity to the ideal granularity.
+        int actualGranularity = getSupportedGranularities(secondsPerCandle);
 
-        // Build and send the HTTP request asynchronously
-        String requestUrl = String.format(
-                "%s/products/%s/candles?granularity=%d&start=%s", url
-                , tradePair.toString('-'), actualGranularity, startDateString);
 
         return client.sendAsync(
-                        requestBuilder.uri(URI.create(requestUrl)).GET().build(),
+                  requestBuilder
+                                .uri(URI.create(String.format(
+                                        "%s/products/%%s/candles?granularity=%%s&start=%%s".formatted(API_URL),
+                                        tradePair.toString('-'), actualGranularity, startDateString)))
+                                .GET().build(),
                         HttpResponse.BodyHandlers.ofString())
                 .thenApply(HttpResponse::body)
-                .thenApply(this::parseCandleData)
-                .thenApply(optionalData -> optionalData.or(Optional::empty));
-    }
+                .thenApply(response -> {
+                    logger.info("coinbase response: " + response);
+                    JsonNode res;
+                    try {
+                        res = OBJECT_MAPPER.readTree(response);
+                    } catch (JsonProcessingException ex) {
+                        throw new RuntimeException(ex);
+                    }
 
-    /**
-     * Parses the response string into an Optional containing InProgressCandleData.
-     *
-     * @param response The JSON response string from the API.
-     * @return An Optional containing InProgressCandleData if data is available, otherwise empty.
-     */
-    private Optional<InProgressCandleData> parseCandleData(String response) {
-        logger.info("Coinbase response: {}", response);
+                    if (res.isEmpty()) {
+                        return Optional.empty();
+                    }
 
-        JsonNode responseNode;
-        try {
-            responseNode = OBJECT_MAPPER.readTree(response);
-        } catch (JsonProcessingException ex) {
-            throw new RuntimeException("Error parsing JSON response", ex);
-        }
+                    JsonNode currCandle;
+                    Iterator<JsonNode> candleItr = res.iterator();
+                    int currentTill = -1;
+                    double openPrice = -1;
+                    double highSoFar = -1;
+                    double lowSoFar = Double.MAX_VALUE;
+                    double volumeSoFar = 0;
+                    double lastTradePrice = -1;
+                    boolean foundFirst = false;
+                    while (candleItr.hasNext()) {
+                        currCandle = candleItr.next();
+                        if (currCandle.get(0).asInt() < currentCandleStartedAt.getEpochSecond() ||
+                                currCandle.get(0).asInt() >= currentCandleStartedAt.getEpochSecond() +
+                                        secondsPerCandle) {
+                            // skip this sub-candle if it is not in the parent candle's duration (this is just a
+                            // sanity guard) TODO(mike): Consider making this a "break;" once we understand why
+                            //  Coinbase is  not respecting start/end times
+                            continue;
+                        } else {
+                            if (!foundFirst) {
+                                // FIXME: Why are we only using the first sub-candle here?
+                                currentTill = currCandle.get(0).asInt();
+                                lastTradePrice = currCandle.get(4).asDouble();
+                                foundFirst = true;
+                            }
+                        }
 
-        if (responseNode.isEmpty()) {
-            return Optional.empty();
-        }
+                        openPrice = currCandle.get(3).asDouble();
 
-        double openPrice = -1;
-        double highSoFar = Double.NEGATIVE_INFINITY;
-        double lowSoFar = Double.POSITIVE_INFINITY;
-        double volumeSoFar = 0;
-        double lastTradePrice = -1;
-        int currentTill = -1;
-        boolean foundFirstCandle = false;
+                        if (currCandle.get(2).asDouble() > highSoFar) {
+                            highSoFar = currCandle.get(2).asDouble();
+                        }
 
-        Instant currentCandleStart = Instant.ofEpochSecond(responseNode.get(0).get(0).asInt());
-        for (JsonNode candle : responseNode) {
-            int candleStartTime = candle.get(0).asInt();
-            int secondsPerCandle = (int) (0.000001 * candle.get(6).asDouble()); // Adjust for
-            int candleEndTime = candleStartTime + secondsPerCandle;
+                        if (currCandle.get(1).asDouble() < lowSoFar) {
+                            lowSoFar = currCandle.get(1).asDouble();
+                        }
 
-            // Skip candles outside the current candle's timeframe
-            if (candleStartTime < currentCandleStart.getEpochSecond() || candleStartTime >= candleEndTime) {
-                continue;
-            }
+                        volumeSoFar += currCandle.get(5).asDouble();
+                    }
 
-            if (!foundFirstCandle) {
-                currentTill = candleStartTime;
-                lastTradePrice = candle.get(4).asDouble();
-                foundFirstCandle = true;
-            }
+                    int openTime = (int) (currentCandleStartedAt.toEpochMilli() / 1000L);
 
-            openPrice = candle.get(3).asDouble();
-            highSoFar = Math.max(highSoFar, candle.get(2).asDouble());
-            lowSoFar = Math.min(lowSoFar, candle.get(1).asDouble());
-            volumeSoFar += candle.get(5).asDouble();
-        }
-
-        int openTimeInSeconds = (int) (currentCandleStart.toEpochMilli() / 1000L);
-
-        return Optional.of(new InProgressCandleData(openTimeInSeconds, openPrice, highSoFar, lowSoFar, currentTill, lastTradePrice, volumeSoFar));
+                    return Optional.of(new InProgressCandleData(openTime, openPrice, highSoFar, lowSoFar,
+                            currentTill, lastTradePrice, volumeSoFar));
+                });
     }
 
     @Override
     public List<Order> getPendingOrders() throws IOException, InterruptedException {
-
-        requestBuilder.uri(URI.create("%s/orders".formatted(url)));
-        HttpResponse<String> res = client.send(requestBuilder.GET().build(), HttpResponse.BodyHandlers.ofString());
-
-        if (res.statusCode() != 200) {
-            throw new RuntimeException(String.format("Failed to get pending orders: %s", res.body()));
-        }
-
-        return OBJECT_MAPPER.readValue(res.body(), new TypeReference<>() {
-        });
+        return List.of();
     }
 
     @Override
-    public CompletableFuture<String> getOrderBook(@NotNull TradePair tradePair) throws IOException, InterruptedException {
+    public CompletableFuture<OrderBook> getOrderBook(TradePair tradePair) throws IOException, InterruptedException, ExecutionException {
 
-        requestBuilder.uri(URI.create(String.format("%s/products".formatted(url), tradePair.toString('-'))));
-        HttpResponse<String> res = client.send(requestBuilder.GET().build(), HttpResponse.BodyHandlers.ofString());
-
-        if (res.statusCode() != 200) {
-            throw new RuntimeException(String.format("Failed to get order book for %s: %s", tradePair, res.body()));
-        }
-
-        OrderBook orderBook = OBJECT_MAPPER.readValue(res.body(), OrderBook.class);
-        logger.info("coinbase order book: %s".formatted(orderBook));
-        return CompletableFuture.completedFuture(res.body());
+        requestBuilder.uri(URI.create(API_URL + "/products/" + tradePair.toString('-') + "/book"));
+        HttpResponse<String> response = client.sendAsync(requestBuilder.GET().build(), HttpResponse.BodyHandlers.ofString()).get();
+        logger.info("coinbase response: " + response.body());
+        ObjectMapper objectMapper = new ObjectMapper();
+        OrderBook orderBook = objectMapper.readValue(response.body(), OrderBook.class);
+        return CompletableFuture.completedFuture(orderBook);
 
 
     }
 
     @Override
-    public JsonParser getUserAccountDetails() {
+    public Position getPositions() throws IOException, InterruptedException, ExecutionException {
         return null;
     }
 
-    @Override
-    public void connect(String text, String text1, String userIdText) throws IOException, InterruptedException {
-        if (text == null || text1 == null || userIdText == null) {
-            throw new IllegalArgumentException("All parameters must be non-null");
-        }
-        requestBuilder.uri(URI.create(String.format("%s/accounts/%%s".formatted(url))));
-        HttpResponse<String> res = client.send(requestBuilder.GET().build(), HttpResponse.BodyHandlers.ofString());
-
-        if (res.statusCode() != 200) {
-            throw new RuntimeException(String.format("Failed to get user account details for %s: %s", userIdText, res.body()));
-        }
-
-        Account userAccount = OBJECT_MAPPER.readValue(res.body(), Account.class);
-        logger.info("coinbase user account: %s".formatted(userAccount));
-
-
-    }
 
     @Override
-    public void getPositionBook(@NotNull TradePair tradePair) throws IOException, InterruptedException {
+    public List<Order> getOpenOrder(@NotNull TradePair tradePair) throws IOException, InterruptedException, ExecutionException {
 
-        requestBuilder.uri(
-                URI.create(String.format("%s/products/%%s/order_book".formatted(url), tradePair.toString('-')))
-        );
-        HttpResponse<String> res = client.send(requestBuilder.GET().build(), HttpResponse.BodyHandlers.ofString());
+        requestBuilder.uri(URI.create("%s/orders?product_id=%s".formatted(API_URL, tradePair.toString('-'))));
+        List<Order> orders = new ArrayList<>();
 
-        if (res.statusCode() != 200) {
-            throw new RuntimeException(String.format("Failed to get position book for %s: %s", tradePair, res.body()));
-        }
-
-        OrderBook positionBook = OBJECT_MAPPER.readValue(res.body(), OrderBook.class);
-        logger.info("coinbase position book: %s".formatted(positionBook));
-
-    }
-
-    @Override
-    public List<Order> getOpenOrder(@NotNull TradePair tradePair) throws IOException, InterruptedException {
-
-            requestBuilder.uri(URI.create(String.format(url+"/orders?product_id=%s", tradePair.toString('-'))));
-        HttpResponse<String> res = client.send(requestBuilder.GET().build(), HttpResponse.BodyHandlers.ofString());
-
-        if (res.statusCode() != 200) {
-            throw new RuntimeException(String.format("Failed to get open orders for %s: %s", tradePair, res.body()));
-        }
-
-        List<Order> orders = OBJECT_MAPPER.readValue(res.body(), new TypeReference<>() {
-        });
-        logger.info("coinbase open orders: %s".formatted(orders));
+        HttpResponse<String> response = client.sendAsync(requestBuilder.GET().build(), HttpResponse.BodyHandlers.ofString()).get();
+        logger.info("coinbase response: %s".formatted(response.body()));
+        ObjectMapper objectMapper = new ObjectMapper();
+        Order[] ordersArray = objectMapper.readValue(response.body(), Order[].class);
+        Collections.addAll(orders, ordersArray);
         return orders;
 
 
@@ -545,34 +333,23 @@ public class Coinbase extends Exchange {
 
     @Override
     public ObservableList<Order> getOrders() throws IOException, InterruptedException {
-
-        //Get all orders from Coinbase API
-
-        ObservableList<Order> orders = FXCollections.observableArrayList();
-
-        requestBuilder.uri(URI.create(STR."\{url}/orders"));
-        HttpResponse<String> res = client.send(requestBuilder.GET().build(), HttpResponse.BodyHandlers.ofString());
-
-        if (res.statusCode() != 200) {
-            logger.error("Failed to get all orders: {}", res.body());
-            return orders;
-        }
-
-        List<Order> allOrders = OBJECT_MAPPER.readValue(res.body(), new TypeReference<>() {
-        });
-        logger.info(STR."coinbase all orders: \{allOrders}");
-        orders.addAll(allOrders);
-        return orders;
+        return null;
     }
 
-    ArrayList<TradePair> tradePairs = new ArrayList<>();
+
+
+
+
+
+
+
 
     @Override
     public CompletableFuture<ArrayList<TradePair>> getTradePairs() {
 
-        requestBuilder.uri(URI.create("https://api.pro.coinbase.com/products"));
+        requestBuilder.uri(URI.create("%s/products".formatted(API_URL)));
 
-
+      ArrayList<TradePair> tradePairs = new ArrayList<>();
         try {
 
             HttpResponse<String> response = client.sendAsync(requestBuilder.GET().build(), HttpResponse.BodyHandlers.ofString()).get();
@@ -624,110 +401,104 @@ public class Coinbase extends Exchange {
 
 
     }
+CustomWebSocketClient customWebSocketClient = new CustomWebSocketClient();
+    @Override
+    public void streamLiveTrades(@NotNull TradePair tradePair, LiveTradesConsumer liveTradesConsumer) {
 
-    public static class CoinbaseCandleDataSupplier extends CandleDataSupplier {
-        protected static final ObjectMapper OBJECT_MAPPER = new ObjectMapper()
-                .registerModule(new JavaTimeModule())
-                .enable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS)
-                .configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
-        private static final int EARLIEST_DATA = 1422144000; // roughly the first tra
+        String urls= "%s://%s:%d".formatted(websocketURL, tradePair.toString('-'), 20);
+        message =
+                "{\"type\": \"subscribe\", \"channels\": [{\"name\": \"level2\",\"product_id\": \"%s\"}]}".formatted(tradePair.toString('-'));
+        CompletableFuture<String> dat = webSocketClient.sendWebSocketRequest(urls, message);
 
-        CoinbaseCandleDataSupplier(int secondsPerCandle, TradePair tradePair) {
-            super(200, secondsPerCandle, tradePair, new SimpleIntegerProperty(-1));
+        dat= customWebSocketClient.sendWebSocketRequest(urls, message);
+        logger.info("WebSocket",dat);
+    }
+
+
+    @Override
+    public void stopStreamLiveTrades(TradePair tradePair) {
+
+    }
+
+    @Override
+    public List<PriceData> streamLivePrices(@NotNull TradePair symbol) {
+        return List.of();
+    }
+
+    @Override
+    public List<CandleData> streamLiveCandlestick(@NotNull TradePair symbol, int intervalSeconds) {
+
+        String urls= websocketURL+ "://"+symbol + ":"+intervalSeconds ;
+        message =
+                "{\"type\": \"subscribe\", \"channels\": [{\"name\": \"level2\",\"product_id\": \"%s\"}]}".formatted(symbol);
+        CompletableFuture<String> dat = webSocketClient.sendWebSocketRequest(urls, message);
+        logger.info("WebSocket",dat);
+        return Collections.emptyList();
+
+    }
+
+    @Override
+    public List<OrderBook> streamOrderBook(@NotNull TradePair tradePair) {
+        return List.of();
+    }
+
+    @Override
+    public CompletableFuture<String> cancelAllOrders() throws InvalidKeyException, NoSuchAlgorithmException, IOException {
+        return null;
+    }
+
+    @Override
+    public boolean supportsStreamingTrades(TradePair tradePair) {
+        return false;
+    }
+
+    @Override
+    ArrayList<CryptoDeposit> getCryptosDeposit() throws IOException, InterruptedException {
+        return null;
+    }
+
+    @Override
+    ArrayList<CryptoWithdraw> getCryptosWithdraw() throws IOException, InterruptedException {
+        return null;
+    }
+
+
+    // Set of supported granularities in seconds for Coinbase
+    private static final Set<Integer> SUPPORTED_GRANULARITIES = new TreeSet<>(Set.of(
+            60,     // 1 minute
+            300,    // 5 minutes
+            900,    // 15 minutes
+            3600,   // 1 hour
+            21600,  // 6 hours
+            86400   // 1 day
+    ));
+
+    /**
+     * Checks whether the given secondsPerCandle is supported by Coinbase.
+     *
+     * @param secondsPerCandle the candle duration in seconds
+     * @return true if the granularity is supported, false otherwise
+     */
+    public boolean isSupportedGranularity(int secondsPerCandle) {
+        return SUPPORTED_GRANULARITIES.contains(secondsPerCandle);
+    }
+
+    /**
+     * Returns the set of supported granularities for Coinbase.
+     *
+     * @return Set of supported granularity values in seconds.
+     */
+    public int  getSupportedGranularities(int secondsPerCandle) {
+
+        // If the given secondsPerCandle is supported, return the exact granularity.
+        if (isSupportedGranularity(secondsPerCandle)) {
+            return secondsPerCandle;
 
         }
 
-        @Override
-        public Set<Integer> getSupportedGranularity() {
-            // https://docs.pro.coinbase.com/#get-historic-rates
-            return new TreeSet<>(Set.of(60, 300, 900, 3600, 21600, 86400));
+        return 0;
+        // If the given secondsPerCandle is not supported, return the closest supported granularities.
 
-        }
-
-        @Override
-        public CandleDataSupplier getCandleDataSupplier(int secondsPerCandle, TradePair tradePair) {
-            return new CoinbaseCandleDataSupplier(secondsPerCandle, tradePair);
-        }
-
-        @Override
-        public Future<List<CandleData>> get() {
-            if (endTime.get() == -1) {
-                endTime.set((int) (Instant.now().toEpochMilli() / 1000L));
-            }
-
-            String endDateString = DateTimeFormatter.ISO_LOCAL_DATE_TIME
-                    .format(LocalDateTime.ofEpochSecond(endTime.get(), 0, ZoneOffset.UTC));
-
-            int startTime = Math.max(endTime.get() - (numCandles * secondsPerCandle), EARLIEST_DATA);
-            String startDateString = DateTimeFormatter.ISO_LOCAL_DATE_TIME
-                    .format(LocalDateTime.ofEpochSecond(startTime, 0, ZoneOffset.UTC));
-
-            if (startTime == EARLIEST_DATA) {
-                // signal more data is false
-                return CompletableFuture.completedFuture(Collections.emptyList());
-            }
-
-
-            return client.sendAsync(
-                            requestBuilder
-                                    .uri(URI.create(
-                                            "%s%s".formatted(url, "/products/%s/candles?granularity=%d&start=%s&end=%s".formatted(tradePair.toString('-'), secondsPerCandle, startDateString, endDateString))))
-                                    .GET().build(),
-                            HttpResponse.BodyHandlers.ofString())
-                    .thenApply(response -> {
-
-                        if (response.statusCode() != 200) {
-
-                            logger.error("Failed to fetch candle data: %s for trade pair: %s".formatted(response.body(), tradePair));
-
-
-
-                            Stage stage = new Stage();
-                            Label infos = new Label();
-                            infos.setText("Failed to fetch candle data: %s for trade pair: %s".formatted(response.body(), tradePair));
-                            Scene scene = new Scene(infos);
-                            stage.setScene(scene);
-                            stage.show();
-
-
-                        }
-
-
-                        JsonNode res;
-                        try {
-                            res = OBJECT_MAPPER.readTree(response.body());
-                        } catch (JsonProcessingException ex) {
-                            throw new RuntimeException(ex);
-                        }
-
-                        if (!res.isEmpty()) {
-                            // Remove the current in-progress candle
-                            if (res.get(0).get(0).asInt() + secondsPerCandle > endTime.get()) {
-                                ((ArrayNode) res).remove(0);
-                            }
-                            endTime.set(startTime);
-
-                            List<CandleData> candleData = new ArrayList<>();
-                            for (JsonNode candle : res) {
-                                candleData.add(new CandleData(
-                                        candle.get(3).asDouble(),  // open price
-                                        candle.get(4).asDouble(),  // close price
-                                        candle.get(2).asDouble(),  // high price
-                                        candle.get(1).asDouble(),  // low price
-                                        candle.get(0).asInt(),     // open time
-                                        candle.get(5).asDouble()   // volume
-                                ));
-                            }
-                            candleData.sort(Comparator.comparingInt(CandleData::getOpenTime));
-                            return candleData;
-                        } else {
-
-                            logger.info(
-                                    "No candle data found for trade pair: %s from %s to display".formatted(tradePair, startDateString)
-                            );
-                            return Collections.emptyList();
-                        }
-                    });
-        }
     }
 }
+
